# sunda-lang

./: .gitmodules  .travis.yml  CMakeLists.txt  COMPILING.md  README.md
sample/: comment.sd  extern.sd  function.sd  include.sd  main.sd  oop.sd  primitive.sd
script/: install_deps.sh
src/: CMakeLists.txt  Type.h  main.cpp
src/codegen/: Function.cpp  Function.h
src/syntax/: AST.cpp  AST.h  Lexer.cpp  Lexer.h  Location.cpp  Location.h  Parse.cpp  Parser.h  Token.cpp  Token.h
src/syntax/AST/: BoolLiteral.cpp  BoolLiteral.h  Expressions.cpp  Expressions.h  NumberLiteral.cpp  NumberLiteral.h
test/: CMakeLists.txt
test/syntax/: Lexer.cpp  lexer.cpp
